syntax = "proto3";

package account;

import "google/protobuf/empty.proto";

message Credentials {
  string username = 1;
  string public_key = 2;
}

message AuthenticateRequest {
  oneof body {
    Credentials credentials = 1;
    string signature = 2;
  }
}

message AuthenticateResponse {
  oneof body {
    string challenge = 1;
    TokenResponse tokens = 2;
  }
}

message RefreshTokenRequest {
  string account_token = 1;
}

message TokenResponse {
  string account_token = 1;
  string api_token = 2;
}

service AccountService {
  rpc Authenticate(stream AuthenticateRequest) returns (stream AuthenticateResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse) {}
}
